# corrosion-analyser

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: corrosion-analyser.yml  test-and-deploy.yml
backend/: characteristics.py
backend/calculations/: material_calculations.py  misc_calculations.py  pressure_calculations.py  statistical_calculations.py
backend/models/: __init__.py  defect.py  environment.py  material.py  pipe.py
calculations/: defect_calculations.py  material_calculations.py  pressure_calculations.py
core/: characteristics.py
core/calculations/: misc_calculations.py  pressure_calculations.py
frontend/: main.py
src/: app.py
src/assets/: home.css
src/frontend_testing/: graph_demo.py  main.py  mockup.py  test.py
src/pages/: defect-analysis.py  defect_analysis.py  examples.py  home.py  interacting-defects.py  single-defect.py  single-defect.py.bak
src/utils/: __init__.py  characteristics.py
src/utils/calculations/: defect_calculations.py  pressure_calculations.py  statistical_calculations.py  stress_calculations.py
src/utils/graphing/: defect_plots.py  pipe_plots.py  single_defect.py
src/utils/layout/: layout.py
src/utils/models/: __init__.py  defect.py  environment.py  factors.py  material.py  (+2 more)
tests/: conftest.py
tests/fixtures/: example_1.json  example_2.json  example_a_1.json
tests/unittests/: test_defect_calculations.py  test_material_calculations.py  test_misc_calculations.py  test_pipe.py  test_pressure_calculations.py  test_stress_calculations.py
webui/: mockup.py
(+6 files in other folders)
