[tool.poetry]
name = "corrosion-analyser"
version = "0.1.0"
description = "Analyse corroded pipelines and assess the integrity and remaining life as per DNV-RP-F101"
authors = ["Nicholas Lim <nicholaslimck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
dash = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
syrupy = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
