[tool.poetry]
name = "corrosion-analyser"
version = "0.1.0"
description = "Analyse corroded pipelines and assess the integrity and remaining life as per DNV-RP-F101"
authors = ["Nicholas Lim <nicholaslimck@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^1.4.3"
dash = "^2.6.1"
scipy = "^1.9.1"
dash-bootstrap-components = "^1.5.0"
sympy = "^1.12"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
syrupy = "^4.0.8"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "--cov utils"
